--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -2,4 +2,15 @@
     <string name="app_name">MyMyFirstApp</string>
     <!-- TODO: Remove or change this placeholder text -->
     <string name="hello_blank_fragment">Hello blank fragment</string>
+    <string name="add">Add</string>
+    <string name="name">Name</string>
+    <string name="phone">Phone</string>
+
+    <string name="About">ชื่อ สุวิมล ดงกระโทก\n
+ชื่อเล่น หนูนา \n
+เกิดวันที่21 พฤศจิกายน 2542\n
+น้ำหนัก56 ส่วนสูง156\n
+        กำลังศึกษาอยู่ชั้นปีที่3\n
+        สาขาวิทยาการคอมพิวเตอร์\n
+        มหาวิทยาลัยเทคโนโลยีราชมงคงอีสาน\n</string>
 </resources>
